# http-file-server

./: AGENTS.md  BENCHMARKS.md  Cargo.toml  README.md
examples/: serve.rs
src/: lib.rs  request.rs  response.rs  server.rs  tls.rs
