[package]
name = "http-file-server"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.186"

[dependencies.rustls]
version = "0.23"
optional = true
default-features = false
features = ["std", "ring", "tls12"]

[dependencies.rustls-pemfile]
version = "2"
optional = true

[features]
default = ["tls"]
tls = ["dep:rustls", "dep:rustls-pemfile"]
